--- a/components/reproductor.css
+++ b/components/reproductor.css
@@ -1,6 +1,6 @@
 .card {
     position: absolute;
-    bottom: 4rem;
+    bottom: 10rem;
     width: 100%;
     height: 200px;
     --glow-color: rgb(217, 176, 255);
@@ -23,7 +23,14 @@
 
 .title-container {
     display: flex;
-    justify-content: start;
+    justify-content: flex-end;
+}
+
+.title-container p {
+    position: absolute;
+    right: 5%;
+    font-size: 30px;
+    bottom: 110px;
 }
 
 .title-1 {
@@ -180,7 +187,7 @@
 @media only screen and (max-width: 480px) {
     .card {
         position: absolute;
-        bottom: 10rem;
+        bottom: 15rem;
         width: 100%;
         height: 200px;
         --glow-color: rgb(217, 176, 255);
@@ -206,11 +213,11 @@
         justify-content: start;
     }
 
-    .title-1 {
-        color: white;
-        font-size: 35px;
-        font-weight: bolder;
-        padding-bottom: 10px;
+    .title-container p {
+        position: absolute;
+        right: 5%;
+        font-size: 30px;
+        bottom: 110px;
     }
 
     .controls {
