--- a/components/reproductor.css
+++ b/components/reproductor.css
@@ -1,9 +1,13 @@
 /* Mobile */
+:root {
+  --card-bottom: 10rem; 
+}
+
 .card {
   position: absolute;
-  bottom: 10rem !important;
+  bottom: var(--card-bottom);
   width: 100%;
-  height: 120px;
+  height: 110px;
   --glow-color: rgb(217, 176, 255);
   --glow-spread-color: rgba(191, 123, 255, 0.781);
   --enhanced-glow-color: rgb(231, 206, 255);
@@ -179,8 +183,10 @@
 
 /* Estilos Desktop */
 @media only screen and (min-width: 481px) {
+  :root {
+    --card-bottom: 1rem;
+  }
   .card {
-    bottom: 1rem;
     height: 95px;
   }
   .title-container p {
